--- a/lite/examples/object_detection/android/app/build.gradle
+++ b/lite/examples/object_detection/android/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
     aaptOptions {
         noCompress "tflite"
+        noCompress "lite"
     }
     compileOptions {
         sourceCompatibility = '1.8'
@@ -42,4 +43,5 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
 }
